# plot-portfolio

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  logging_config.ini  pyproject.toml
in/: .gitignore
notebooks/: etrade_parser_demo.ipynb  plot_etrade.ipynb
src/portfolio_analysis/: __init__.py
src/portfolio_analysis/parsing/: __init__.py  etrade.py
src/portfolio_analysis/utils/: __init__.py  logging.py
